--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<frameset cols="300,*" frameborder="1" border="1" bordercolor="#666666" framespacing="1">
 		<frame src="panel/index.html" title="Search" name="panel" />
-		<frame src="files/README.html" name="docwin" />
+		<frame src="README.html" name="docwin" />
 	</frameset>
 </html>
