--- a/template/layout.phtml
+++ b/template/layout.phtml
@@ -6,16 +6,16 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title><?= strip_tags($template['title']) ?></title>
 
-		<link rel="stylesheet" href="../../styles/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="../../styles/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="../../styles/shCore.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="../../styles/shThemeDefault.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/shCore.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/shThemeDefault.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-	    <script src="../../scripts/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
-	    <script src="../../scripts/jquery-effect.js" type="text/javascript" charset="utf-8"></script>
-	    <script src="../../scripts/main.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../scripts/shCore.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../scripts/shBrushPhp.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/jquery-effect.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/main.js" type="text/javascript" charset="utf-8"></script>
+		<script src="<?= $this->file_depth ?>scripts/shCore.js" type="text/javascript" charset="utf-8"></script>
+		<script src="<?= $this->file_depth ?>scripts/shBrushPhp.js" type="text/javascript" charset="utf-8"></script>
 
 	</head>
 	<body class="body_<?= strtolower($template['doctype']) ?>">
@@ -24,9 +24,11 @@
 			<span class="type"><?= $template['doctype'] ?></span>
 		    <h1><span class="title"><?= isset($template['header']) ? $template['header'] : $template['title'] ?></span>
 				<? if (isset($this->xml->class->summary->parentClasses->class)): ?>
-					<em class="parent">extends <a href=""><?= (string) $this->xml->class->summary->parentClasses->class ?></a></em>
+					<em class="parent">extends <a href="../<?= (string) $this->xml->class->summary->parentClasses->class ?>/index.html"><?= (string) $this->xml->class->summary->parentClasses->class ?></a></em>
 				<? endif; ?></h1>
-			<p><?= (string) $this->xml->class->fileData->docBlock->section[0]->contents->line ?></p>
+			<? if (isset($this->xml->class->summary->docBlock->section[0]->contents->line)): ?>
+			<p><?= (string) $this->xml->class->summary->docBlock->section[0]->contents->line ?></p>
+			<? endif; ?>
 		</div>
 
 		<div id="bodyContent">
