Remove the last output directory on regen. Tweaked the README. Added runtime to output.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -46,7 +46,7 @@
 		<li><a href="http://github.com/skyzyx/cachecore">CacheCore</a> &mdash; Handles the response caching with support for multiple storage types. (BSD-licensed)</li>
 		<li><a href="http://github.com/skyzyx/ndocs">NDocs</a> &mdash; Generates our documentation from source code, docblocks and a custom UI template. (MIT-licensed)</li>
 		<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
-		<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML.</li>
+		<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 	</ul>
 
 </div>
