--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -127,7 +127,7 @@ ol li {
 
 code, tt {
 	font: 1em/1.3em "Consolas", "Bitstream Vera Sans Mono", Monaco, monospace !important;
-	background-color: #fee;
+	background-color: #eef;
 	color: #000080;
 	padding: 1px;
 }
