Added the search index. Refined the README.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -13,7 +13,19 @@
 	<br>
 
 	<div class="title">
-		<strong>Requirements</strong>
+		<strong>Using the SDK Reference</strong>
+	</div>
+	<ul>
+		<li>Press <code>up</code>, <code>down</code>, <code>left</code> and <code>right</code> to navigate the browse panel. Press <code>enter</code> to make a selection. Press <code>esc</code> to clear searches.</li>
+		<li>Searching will intelligently find results that start with (first), contain (second) and smart match (third) the words you're looking for.</li>
+		<li>Looking for a method that exists in multiple classes? Narrow your results by following your search term with the class you want to search.</li>
+		<li>Tested with Safari 4, Firefox 3, Opera 9.5, Chrome, IE8. IE 6 &amp; 7 are usable but <em>painfully</em> slow.</li>
+	</ul>
+
+	<br>
+
+	<div class="title">
+		<strong>SDK Requirements</strong>
 	</div>
 	<div class="description">
 		<h4>Base Requirements</h4>
@@ -41,12 +53,21 @@
 		<strong>On the shoulders of giants&hellip;</strong>
 	</div>
 	<p>The PHP SDK and its documentation wouldn't have been made possible without the following projects:</p>
-	<ul>
-		<li><a href="http://github.com/skyzyx/requestcore">RequestCore</a> &mdash; Handles all of the HTTP requests and responses, including batch requests. (BSD-licensed)</li>
-		<li><a href="http://github.com/skyzyx/cachecore">CacheCore</a> &mdash; Handles the response caching with support for multiple storage types. (BSD-licensed)</li>
-		<li><a href="http://github.com/skyzyx/ndocs">NDocs</a> &mdash; Generates our documentation from source code, docblocks and a custom UI template. (MIT-licensed)</li>
-		<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
-		<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
-	</ul>
+	<div class="description">
+		<h4>Inspiration</h4>
+		<ul>
+			<li><a href="http://railsapi.com">Rails Searchable API Doc</a> &mdash; Smart search, beautifully packed, for Ruby on Rails.</li>
+			<li><a href="http://james.padolsey.com/jquery/">jQuery source viewer</a> &mdash; Lookup the implementation for any jQuery method.</li>
+		</ul>
+
+		<h4>Open source projects</h4>
+		<ul>
+			<li><a href="http://github.com/skyzyx/requestcore">RequestCore</a> &mdash; Handles all of the HTTP requests and responses, including batch requests. (BSD-licensed)</li>
+			<li><a href="http://github.com/skyzyx/cachecore">CacheCore</a> &mdash; Handles the response caching with support for multiple storage types. (BSD-licensed)</li>
+			<li><a href="http://github.com/skyzyx/ndocs">NDocs</a> &mdash; Generates our documentation from source code, docblocks and a custom UI template. (MIT-licensed)</li>
+			<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
+			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
+		</ul>
+	</div>
 
 </div>
