Updated the naming to Vanity.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -52,7 +52,7 @@
 	<div class="title">
 		<strong>On the shoulders of giants&hellip;</strong>
 	</div>
-	<p>The PHP SDK and its documentation wouldn't have been made possible without the following projects:</p>
+	<p>The CloudFusion SDK and its documentation wouldn't have been made possible without the following projects:</p>
 	<div class="description">
 		<h4>Inspiration</h4>
 		<ul>
@@ -64,7 +64,7 @@
 		<ul>
 			<li><a href="http://github.com/skyzyx/requestcore">RequestCore</a> &mdash; Handles all of the HTTP requests and responses, including batch requests. (BSD-licensed)</li>
 			<li><a href="http://github.com/skyzyx/cachecore">CacheCore</a> &mdash; Handles the response caching with support for multiple storage types. (BSD-licensed)</li>
-			<li><a href="http://github.com/skyzyx/ndocs">NDocs</a> &mdash; Generates our documentation from source code, docblocks and a custom UI template. (MIT-licensed)</li>
+			<li><a href="http://github.com/skyzyx/vanity">Vanity</a> &mdash; Uses PHP's Reflection API to generate source reference documentation. (MIT-licensed)</li>
 			<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
 			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 		</ul>
