--- a/template/partials/index.phtml
+++ b/template/partials/index.phtml
@@ -61,4 +61,7 @@
 			<? endforeach; ?>
 		</dl>
 	<? endif; ?>
+
+	<div class="sectiontitle">Alternate Formats</div>
+	<p><a href="../../xml/<?= $template['title'] ?>.xml">XML</a>, <a href="../../json/<?= $template['title'] ?>.js">JSON</a></p>
 </div>
