--- a/template/styles/shCore.css
+++ b/template/styles/shCore.css
@@ -62,7 +62,7 @@
 .syntaxhighlighter
 {
 	width: 99% !important; /* 99% fixes IE8 horizontal scrollbar */
-	margin: 1em 0 1em 0 !important;
+	/*margin: 1em 0 1em 0 !important;*/ /* Causes issues with jQuery effects */
 	padding: 1px !important; /* adds a little border on top and bottom */
 	position: relative !important;
 }
