Fixes for case-sensitive file systems.

--- a/template/index.phtml
+++ b/template/index.phtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>CloudFusion</title>
+		<title><?= $this->title ?></title>
 	</head>
 	<frameset cols="300,*" frameborder="1" border="1" bordercolor="#666666" framespacing="1">
 		<frame src="panel/index.html" title="Search" name="panel" />
