--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -43,12 +43,14 @@ h2 {
 	line-height: 1.2em;
 }
 
+/*
 h3 {
 	font-size: 1.4em;
 	color: #555;
 	margin: 1.4em 0 0.7em 0;
 	font-weight: normal;
 }
+*/
 
 h4 {
 	margin: 1.4em 0 0.5em 0;
@@ -177,6 +179,9 @@ pre {
 	margin-right: 3.5em;
 }
 
+#content h1 {
+	display: none;
+}
 
 .sectiontitle {
 	margin-top: 2em;
@@ -245,20 +250,48 @@ tt {
 	margin-left: 1.2em;
 }
 
-.method h4 {
-	border-bottom: 1px dotted #999;
-	padding: 0 0 0.2em 0;
-	margin-bottom: 0.8em;
-	font-size: 1.1em;
-	color: #333;
+.method h2 {
+	padding: 0 0 0.15em 0;
+	margin: 1em 0 0.5em 0;
+	font-size: 1.4em;
+	line-height: 1.25em;
+
+	color: #fff;
+	background-color: #333;
+	padding: 2px 5px;
+	display: inline-block;
+
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
 
+.method h3 {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+	font-weight: 500;
+}
+
+.method h3,
 .method .title {
 	border-bottom: 1px dotted #666;
 	padding: 0 0 0.15em 0;
 	margin: 0 0 0.5em 0;
 	font-size: 1.2em;
 	line-height: 1.25em;
+}
+
+.method h4 {
+	border-bottom: 1px dotted #999;
+	padding: 0 0 0.2em 0;
+	margin-bottom: 0.8em;
+	font-size: 1.1em;
+	color: #333;
 }
 
 .method .sourcecode p.source-link {
