Added support for a YAML-based examples description file.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -18,9 +18,11 @@
 	<p>This documentation wouldn't have been made possible without the following projects:</p>
 	<div class="description">
 		<ul>
-			<li><a href="http://github.com/skyzyx/vanity">Vanity</a> &mdash; Uses PHP's Reflection API to generate source reference documentation. (MIT-licensed)</li>
+			<li><a href="http://github.com/skyzyx/vanity/">Vanity</a> &mdash; Uses PHP's Reflection API to generate source reference documentation. (MIT-licensed)</li>
 			<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
 			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
+			<li><a href="http://code.google.com/p/spyc/">Spyc</a> &mdash; Pure PHP YAML parser. (MIT-licensed)</li>
+			<li><a href="http://github.com/skyzyx/phpt/">PHPT Parser</a> &mdash; Parses PHPT unit test files. (MIT-licensed)</li>
 		</ul>
 	</div>
 
