Updated the README.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -20,9 +20,10 @@
 		<ul>
 			<li><a href="http://github.com/skyzyx/vanity/">Vanity</a> &mdash; Uses PHP's Reflection API to generate source reference documentation. (MIT-licensed)</li>
 			<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
-			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 			<li><a href="http://code.google.com/p/spyc/">Spyc</a> &mdash; Pure PHP YAML parser. (MIT-licensed)</li>
+			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 			<li><a href="http://github.com/skyzyx/phpt/">PHPT Parser</a> &mdash; Parses PHPT unit test files. (MIT-licensed)</li>
+			<li><a href="http://alexgorbatchev.com/wiki/SyntaxHighlighter">Syntax Highlighter</a> &mdash; Used when displaying source code. (LGPL-licensed)
 		</ul>
 	</div>
 
